Fix #23027 - [Feature] Evaluation cube

--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get.properties
@@ -87,6 +87,11 @@ jsolap.entities.caption                  = All linked entities
 jsolap.entities.title                    = Entities
 jsolap.entity.caption                    = All entities
 jsolap.entity.title                      = Entity
+jsolap.entityFamily.title                = Entity family
+jsolap.entityState.title                 = Entity state
+jsolap.entitySubFamily.title             = Entity subfamily
+jsolap.entityType.caption				 = All entity types
+jsolap.entityType.title					 = Entity type
 jsolap.entryDate.caption                 = Creation date
 jsolap.entryDate.title                   = Entry date
 jsolap.erpCode.title                     = ERP code
@@ -239,7 +244,6 @@ jsolap.projectState.title                = Project state
 jsolap.projectSubFamily.title            = Project subfamily
 jsolap.projectedQuantity.title           = Projected quantity
 jsolap.projects.title                    = Projects
-jsolap.projectsEvaluation.title          = Projects evaluation
 jsolap.projectsNumber.title              = Projects number 
 jsolap.projectsNumberDistinct.title      = Projects number (distinct)
 jsolap.projectsSteps.caption             = All steps
