--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>4.2.3.81-SNAPSHOT</version>
+    <version>4.2.3.81</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -95,4 +95,8 @@
 			</plugin>
 		</plugins>	
 	</reporting>
+
+  <scm>
+    <tag>4.2.3.81</tag>
+  </scm>
 </project>
