--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.81</version>
+    <version>4.2.3.82-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -168,8 +168,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>4.2.3.81</tag>
-  </scm>
 </project>
