--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.2.43-SNAPSHOT</version>
+    <version>4.2.2.43</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -40,6 +40,6 @@
 	</build>
 
   <scm>
-    <tag>4.2.2.18</tag>
+    <tag>4.2.2.43</tag>
   </scm>
 </project>
