--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
@@ -12,6 +12,8 @@ header.becpg.faceted.search.label = Faceted search...
 header.ecm-auto-record.label      = Record modifications
 header.nc-list.description        = Issues management
 header.nc-list.label              = Issues management
+header.product-list.description   = Products
+header.product-list.label         = Products
 header.wused.search.description   = Search by where used
 header.wused.search.label         = Search by where used
 
@@ -24,7 +26,7 @@ menu.create-content.eco                      = Change order...
 menu.create-content.entity                   = Entity...
 menu.create-content.finishedProduct          = Finished product...
 menu.create-content.localSemiFinishedProduct = Semi-finished (local)...
-menu.create-content.logisticUnit			 = Logistic unit...
+menu.create-content.logisticUnit             = Logistic unit...
 menu.create-content.nc                       = Non conformity...
 menu.create-content.packagingKit             = Packaging kit...
 menu.create-content.packagingMaterial        = Packaging material...
