--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>4.2.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-	<version>4.2.2.44</version>
+	<version>4.2.2.45-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
