--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
@@ -12,8 +12,8 @@ header.becpg.faceted.search.label = Faceted search...
 header.ecm-auto-record.label      = Record modifications
 header.nc-list.description        = Issues management
 header.nc-list.label              = Issues management
-header.product-list.description   = Products
-header.product-list.label         = Products
+header.product-list.description   = Product repository
+header.product-list.label         = Product repository
 header.wused.search.description   = Search by where used
 header.wused.search.label         = Search by where used
 
