Fix #18331 - [Feature] Add remote rate limiter

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -21,6 +21,8 @@ beCPG.remote.rateLimiter.capacity.type=Integer
 beCPG.remote.rateLimiter.refillRate.description=Rate at which the token bucket refills for the remote API rate limiter (token/ms).
 beCPG.remote.rateLimiter.refillRate.type=Double
 
+beCPG.remote.maxResults.limit.description = Maw results limit in remote API
+beCPG.remote.maxResults.limit.type = Integer
 
 beCPG.eco.automatic.apply.description                          = Allows you to specify whether the automatic change order should be applied
 beCPG.eco.automatic.deleteOnApply.description                  = Allows you to specify whether change orders should be deleted after being applied
