--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -68,6 +68,7 @@ beCPG.remoteServer=http://localhost:8080/alfresco
 #Rate limiter maximum 100 requests/seconds
 beCPG.remote.rateLimiter.capacity=100
 beCPG.remote.rateLimiter.refillRate=0.1
+beCPG.remote.maxResults.limit=256
 
 #DocLib tree
 becpg.doclibtree.showEntities=false
