--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>4.2.3.83</version>
+    <version>4.2.3.84-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -115,8 +115,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>4.2.3.83</tag>
-  </scm>
 </project>
