--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.83</version>
+    <version>4.2.3.84-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -60,8 +60,4 @@
 		</dependency>
 
 	</dependencies>
-
-  <scm>
-    <tag>4.2.3.83</tag>
-  </scm>
 </project>
