--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>23.2.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.1.5</version>
+	<version>23.2.1.6-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -168,8 +168,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>23.2.1.5</tag>
-  </scm>
 </project>
