--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.1.5</version>
+    <version>23.2.1.6-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -94,8 +94,4 @@
 			</plugin>
 		</plugins>	
 	</reporting>
-
-  <scm>
-    <tag>23.2.1.5</tag>
-  </scm>
 </project>
