Fix #20640 - [Feature] Added svhcList to customLists

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get.properties
@@ -22,6 +22,7 @@ dashlet.customList.organoList.title          = Organoleptic
 dashlet.customList.packMaterialList.title    = Materials
 dashlet.customList.physicoChemList.title     = Physicochemical characteristics
 dashlet.customList.processList.title         = Process list
+dashlet.customList.svhcList.title			 = Dangerous substances
 dashlet.customList.title                     = Custom list
 dashlet.dynamicCharactList.colCheckbox       = Show dynamic column
 dashlet.dynamicCharactList.title             = Dynamic characteristic
