--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.1.9-SNAPSHOT</version>
+	<version>23.2.1.9</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -63,4 +63,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>23.2.1.9</tag>
+  </scm>
 </project>
