Fix #23716 - [Bug] Fix decorate in renderFlatHtmlTable

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-controls.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-controls.properties
@@ -39,6 +39,7 @@ locale.name.ar_SD  = Arabic - Sudan
 locale.name.ar_SY  = Arabic - Syria
 locale.name.ar_TN  = Arabic - Tunisia
 locale.name.ar_YE  = Arabic - Yemen
+locale.name.az_AZ  = Azerbaijani - Azerbaijan
 locale.name.be     = Belarusian
 locale.name.be_BY  = Belarusian - Belarus
 locale.name.bem_ZM = Bemba - Zambia
