Fix #23595 - [Bug] Add missing comment count on certification list

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-process/entity-process.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-process/entity-process.get.properties
@@ -19,3 +19,4 @@ process.state.InProgress = In progress
 process.state.OnHold     = On hold
 process.state.Planned    = Planned
 process.state.active     = Active
+process.state.archived   = Archived
