InProgress #22457 - [Feature] LCA, survey, svhc lists in adv search

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -52,6 +52,7 @@ bcpg_bcpgmodel.association.bcpg_advClCost2.title                          = Cost
 bcpg_bcpgmodel.association.bcpg_advIlGeoOriginNot.title                   = Geographical origins not present
 bcpg_bcpgmodel.association.bcpg_advIlIngAnd.title                         = Ingredients
 bcpg_bcpgmodel.association.bcpg_advIlIngNot.title                         = Ingredients not present
+bcpg_bcpgmodel.association.bcpg_advLca.title                              = Life cycle analysis
 bcpg_bcpgmodel.association.bcpg_advLclClaimAnd.title                      = Claims claimed
 bcpg_bcpgmodel.association.bcpg_advLclClaimNot.title                      = Unclaimed claims
 bcpg_bcpgmodel.association.bcpg_advNlNut1.title                           = Nutrient 1
@@ -61,6 +62,8 @@ bcpg_bcpgmodel.association.bcpg_advNotRespectedProductSpecs.title         = Spec
 bcpg_bcpgmodel.association.bcpg_advPclPhysicoChem1.title                  = Physico-Chemical characteristic 1
 bcpg_bcpgmodel.association.bcpg_advPclPhysicoChem2.title                  = Physico-Chemical characteristic 2
 bcpg_bcpgmodel.association.bcpg_advRespectedProductSpecs.title            = Respected specifications
+bcpg_bcpgmodel.association.bcpg_advSvhcAnd.title                          = Dangerous substances
+bcpg_bcpgmodel.association.bcpg_advSvhcNot.title                          = Dangerous substances not present
 bcpg_bcpgmodel.association.bcpg_allergenListAllergen.title                = Allergen
 bcpg_bcpgmodel.association.bcpg_allergenListInVolSources.title            = Sources of traces
 bcpg_bcpgmodel.association.bcpg_allergenListVolSources.title              = Sources of allergen
