--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -175,6 +175,7 @@ becpg.forms.set.ings-criteria.label                            = Criteria on ing
 becpg.forms.set.innerPack.label                                = Inner packaging
 becpg.forms.set.language.label                                 = Languages
 becpg.forms.set.launch-dateDesired.label                       = Launch date desired
+becpg.forms.set.lca-criteria.label                             = Life cycle analysis criteria
 becpg.forms.set.lca.score.label                                = LCA score
 becpg.forms.set.location.label                                 = Location
 becpg.forms.set.marketing.label                                = Marketing
@@ -209,11 +210,14 @@ becpg.forms.set.product.name                                   = Product Name
 becpg.forms.set.promotional.label                              = Promotion
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Compliance
+becpg.forms.set.score-criteria.label                           = Score criteria
 becpg.forms.set.season.label                                   = Season
 becpg.forms.set.secondaryPackaging.label                       = Logistical unit
 becpg.forms.set.security.label                                 = Security
 becpg.forms.set.securityRule.label                             = Security rule
 becpg.forms.set.selected-products.label                        = Products selection
+becpg.forms.set.survey-criteria.label                          = Survey criteria
+becpg.forms.set.svhc-criteria.label                            = Dangerous substances criteria
 becpg.forms.set.tertiaryPackaging.label                        = Ti/Hi information
 becpg.forms.set.variableTradeItem.label                        = Variable product
 becpg.forms.unit.L                                             = L
