--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
@@ -141,6 +141,10 @@ logger.SearchWebScript.level=info
 logger.workflow.name=fr.becpg.repo.workflow
 logger.workflow.level=info
 
+
+logger.bootstrap.name=fr.becpg.repo.bootstrap
+logger.bootstrap.level=info
+
 logger.multilingual.name=fr.becpg.repo.multilingual
 logger.multilingual.level=info
 
