Fix #22457 - [Feature] Added lists in advanced search + exports

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -45,12 +45,15 @@ path.exportcompositionpackaging          = Export composition and packaging list
 path.exportinglist                       = Export ingredients
 path.exportlabelclaimlist                = Export of claims
 path.exportlabelling                     = Label export
+path.exportlca							 = Export life cycle analysis
 path.exportncsynthesis                   = Non conformities synthesis
 path.exportnutrients                     = Export nutrients
 path.exportphysicochemicallist           = Export of physico-chemicals
 path.exportproducts                      = Export products
 path.exportqualitycontrols               = Export quality controls
 path.exportsupplierscontacts             = Suppliers contacts export
+path.exportsurvey						 = Export surveys
+path.exportsvhc							 = Export SVHC
 path.finishedproduct_hierarchy           = Hierarchy of finished products
 path.geoorigins                          = Geographical origins
 path.gs1_hierarchy                       = GS1 hierarchy
