Fix #21353 - [Feature] Add synchronize SSO

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -91,6 +91,7 @@ label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
 label.select-columns.title   = Check Columns to show
 label.supplier-account.title = Supplier email address
+label.synchronizesso         = Synchronize SSO
 label.usercontentlocale      = Content language
 label.userlocale             = UI language
 
