Fix #21353 - [Feature] Add SSO user button

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -90,8 +90,8 @@ label.export-search          = Export the result
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
 label.select-columns.title   = Check Columns to show
+label.ssouser                = SSO user
 label.supplier-account.title = Supplier email address
-label.synchronizesso         = Synchronize SSO
 label.usercontentlocale      = Content language
 label.userlocale             = UI language
 
