Fix #23811 - [Bug] Missing i18n key

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-controls.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-controls.properties
@@ -14,6 +14,7 @@ autocomplete.pagination.template.page-report  = Showing items {startRecord} - {e
 
 beCPG.forms.validation.GTIN.message               = Value is not a GTIN
 beCPG.forms.validation.checkEmailValidity.message = Value is not an email
+beCPG.forms.validation.mandatoryIf.message        = Field is mandatory
 
 ## Multilingual
 form.field.locale = Edit multilingual field
