--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
@@ -56,7 +56,7 @@ fm_forummodel.property.fm_commentsRollup.title = Nb de commentaires
 
 fr.becpg.entity.state-changed = {1} changed state of entity {0} from  {2} to {3}
 
-integrity-checker.association-multiplicity-error = Cannot delete element used by: {0}
+integrity-checker.association-multiplicity-error = Association target multiplicity error for: {0}
 integrity-checker.constraint-error               = Constraint error, please verify that you haven''t deleted values in the administration lists (eg: material type). Details: {0}
 
 message.async-mail.entitiesTemplate.formulate.body         = Entities formulation 
