Fix #22457 - [Feature] All search exports

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -41,17 +41,28 @@ path.ecoreports                          = ECO reports
 path.exchange                            = Exchange
 path.exportallergens                     = Export allergens
 path.exportciteo                         = Export packaging materials
+path.exportclientsurvey					 = Export client surveys
 path.exportcompositionpackaging          = Export composition and packaging lists
+path.exportdynamiccharactlist			 = Export list of calculated characteristics
+path.exportforbiddening					 = Export forbidden ingredients
 path.exportinglist                       = Export ingredients
 path.exportlabelclaimlist                = Export of claims
+path.exportlabelingrulelist				 = Export labeling rules
 path.exportlabelling                     = Label export
 path.exportlca							 = Export life cycle analysis
 path.exportncsynthesis                   = Non conformities synthesis
 path.exportnutrients                     = Export nutrients
 path.exportphysicochemicallist           = Export of physico-chemicals
 path.exportproducts                      = Export products
+path.exportprojectsurvey				 = Export project surveys
 path.exportqualitycontrols               = Export quality controls
+path.exportspecallergens				 = Export specification allergens
+path.exportspeccompatibilitylist		 = Export non compatible products
+path.exportspeclabelclaimlist			 = Export specification claims
+path.exportspecnutrients				 = Export specification nutrients
+path.exportspecphysicochemicallist		 = Export specification physico-chemicals
 path.exportsupplierscontacts             = Suppliers contacts export
+path.exportsuppliersurvey				 = Export supplier surveys
 path.exportsurvey						 = Export surveys
 path.exportsvhc							 = Export SVHC
 path.finishedproduct_hierarchy           = Hierarchy of finished products
