--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.4</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	  <version>3.2.4.26-SNAPSHOT</version>
+	  <version>3.2.4.26</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -38,4 +38,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>3.2.4.26</tag>
+  </scm>
 </project>
