[Release][skip ci] prepare for next development iteration

--- a/becpg-project/becpg-project-share/pom.xml
+++ b/becpg-project/becpg-project-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.2.48</version>
+    <version>4.2.2.49-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-project-share</artifactId>
 	<packaging>jar</packaging>
