Fix #22852 - [Feature] Add message when lclComment is available in other language

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -462,8 +462,9 @@ form.control.spel-editor.search.enter-more                = Enter more terms
 form.control.spel-editor.selected-items.empty             = Empty
 form.control.spel-editor.show                             = Edit
 
-label.labelling.available = Label available in other languages
-label.labelling.empty     = No labels
+label.information.available = Informations available in other languages
+label.labelling.available   = Label available in other languages
+label.labelling.empty       = No labels
 
 message.spel-editor.failure = Error
 
