Fix #18751 - [Feature] Add precautions column for Decernis

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -283,6 +283,7 @@ bcpg_bcpgmodel.property.bcpg_ingTypeV2.title                              = Type
 bcpg_bcpgmodel.property.bcpg_instruction.title                            = Instructions
 bcpg_bcpgmodel.property.bcpg_irlCitation.title                            = Citation
 bcpg_bcpgmodel.property.bcpg_irlIng.title                                 = Ingredient
+bcpg_bcpgmodel.property.bcpg_irlPrecautions.title                         = Precautions
 bcpg_bcpgmodel.property.bcpg_irlRestrictionLevels.title                   = Restriction\u2019s levels
 bcpg_bcpgmodel.property.bcpg_irlResultIndicator.title                     = Status
 bcpg_bcpgmodel.property.bcpg_irlSources.title                             = Sources
