InProgress #18388 - [Feature] Add  NutRequirementType in product specification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -254,6 +254,9 @@ bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = FEMA
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionization forbidden
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Maximum dosage
+
+
+bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title =  Target unit
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxiUnit.title                     = Unit
 bcpg_bcpgmodel.property.bcpg_filRclDataType.title                         = Constraint type
 bcpg_bcpgmodel.property.bcpg_filReqMessage.title                          = Message
