InProgress #18388 - [Feature] Add  NutRequirementType in product specification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -32,8 +32,6 @@ bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.description                = Prof
 bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.title                      = Product - profitability
 bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description              = Reconstitutable Aspect
 bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                    = Reconstitutable Aspect
-### Aspects
-#Aspect batch
 bcpg_bcpgmodel.aspect.bcpg_regulatoryAspect.title                         = Regulatory aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryCodeAspect.title                     = Regulatory code aspect
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Supplier
@@ -254,9 +252,6 @@ bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = FEMA
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionization forbidden
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Maximum dosage
-
-
-bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title =  Target unit
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxiUnit.title                     = Unit
 bcpg_bcpgmodel.property.bcpg_filRclDataType.title                         = Constraint type
 bcpg_bcpgmodel.property.bcpg_filReqMessage.title                          = Message
@@ -387,6 +382,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                            = Maxi
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Measurement precision
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = Method
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
+bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Target value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Labeled value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Prepared labeled value
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit
@@ -711,6 +707,9 @@ listconstraint.bcpg_meatTypes.Mammals                                 = Mammals
 listconstraint.bcpg_meatTypes.Porcines                                = Porcines
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Approximatly
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Than
+listconstraint.bcpg_nutListRequirementType.AsPrepared                 = Prepared value
+listconstraint.bcpg_nutListRequirementType.GdaPerc                    = % RI per portion
+listconstraint.bcpg_nutListRequirementType.Serving                    = 1 serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Unprepared
 listconstraint.bcpg_packagingLevel.Primary                            = Primary
