--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -311,79 +311,85 @@ entity.activity.type.state       = State
 entity.activity.type.version     = Version
 entity.activity.version          = Create {1} version
 
-message.async-mail.eco.apply.body                    = The application of the modification order {0} 
-message.async-mail.eco.apply.subject                 = [Notification] End of change order application 
-message.async-mail.eco.calculateWUsed.body           = The impact analysis of the change order {0} 
-message.async-mail.eco.calculateWUsed.subject        = [Notification] End of change order impact analysis
-message.async-mail.eco.simulate.body                 = The simulation of the change order {0} 
-message.async-mail.eco.simulate.subject              = [Notification] End of change order simulation
-message.decernis.charact.noCode                      = No regulatory code found for {0}
-message.decernis.error                               = Error running decernis service: {0}
-message.decernis.function.notRecognized              = Function not recognized: {0}
-message.decernis.ingredient.noFunction               = No function found for these ingredients
-message.decernis.ingredient.noRid                    = No RID found for these ingredients
-message.decernis.ingredient.notListed                = Not listed ingredients
-message.decernis.ingredient.permitted                = {0} {1}
-message.decernis.ingredient.prohibited               = Prohibited ingredients {0}
-message.decernis.ingredient.severalRid               = Several RIDs found for these ingredients
-message.formulate.allergen.error.empty               = Allergen not specified
-message.formulate.allergen.error.nullQtyPerc         = Cannot formulate allergen percent {0}.
-message.formulate.allergen.forbidden                 = Forbidden allergen: {0}.
-message.formulate.allergen.notValidated              = Allergens not validated
-message.formulate.comparewith.formulate.entity.error = Cannot formulate entity to compare with: {0}
-message.formulate.cost.formulated                    = Formulation
-message.formulate.costList.error                     = Error formulating cost ''{0}'': - {1}
-message.formulate.empty_req_geo_origin_list          = Specifications are incompatible : required geographic origins for requirement ''{0}'' have no common element
-message.formulate.formula.error                      = Error in formula ''{0}''
-message.formulate.formula.incorrect.nutrientProfile  = Error calculating nutrient profile : {0}
-message.formulate.formula.incorrect.type.boolean     = Formula doesn't return boolean
-message.formulate.formula.incorrect.type.double      = Formula doesn't return double
-message.formulate.formula.toolong                    = Too many elements for the multilevel calculation of the formula {0}
-message.formulate.incorrect.ingList.total            = Total of ingredients is not 100%
-message.formulate.info.nut.notInRangeValue           = The nutrient {0} (value: {1}) is in specification range ({2}expected value{3})
-message.formulate.info.physicoChem.notInRangeValue   = The characteristic {0} (value: {1}) is in specifications range ({2}expected value{3})
-message.formulate.ingredient.forbidden               = An ingredient ({0}) is forbidden by the product specifications
-message.formulate.labelClaim.error                   = Error formulating label claim ''{0}'': - {1}
-message.formulate.labelClaim.missing                 = Claim ''{0}'' missing
-message.formulate.labelClaim.notClaimed              = Label ''{0}'' must be {1}
-message.formulate.labelClaim.value.certified         = certified
-message.formulate.labelClaim.value.false             = not claimed
-message.formulate.labelClaim.value.suitable          = suitable
-message.formulate.labelClaim.value.true              = claimed
-message.formulate.labelRule.error                    = Error formulating label rule ''{0}'': - {1}
-message.formulate.labelRule.error.nullIng            = Cannot declare or aggregate ingredient {0} without quantity, change component declaration type
-message.formulate.lca.formulated                     = Formulation
-message.formulate.lcaList.error                      = Error formulating LCA ''{0}'': - {1}
-message.formulate.mandatory_property                 = Mandatory field ''{0}'' is missing (catalog ''{1}'')
-message.formulate.mandatory_property_localized       = Mandatory field ''{0}'' {2} is missing (catalog ''{1}'')
-message.formulate.missing.density                    = The density of the product is missing.
-message.formulate.missing.ingList                    = The ingredient list is empty
-message.formulate.missing.numberOfProductPerBox      = Number of product per boxes is undefined. Please, add a packaging kit.
-message.formulate.missing.stock                      = Not enought stock.
-message.formulate.missing.tare                       = The tare of the product is missing.
-message.formulate.missing.unit                       = The unit of the product is missing.
-message.formulate.non-unique-field                   = The uniqueness of the field ''{0}'' is not respected
-message.formulate.nonValidatedState                  = Component was not validated
-message.formulate.notauhorized.ing                   = Ingredients are not authorized
-message.formulate.nut.formulated                     = Formulation
-message.formulate.nut.maximalDailyValue              = The maximum daily value of nutrient {0} is exceeded
-message.formulate.nut.notInRangeValue                = The nutrient {0} (value: {1}) is not in specification range ({2}expected value{3})
-message.formulate.nut.wrongServingSize               = Wrong serving size {0} for {1}
-message.formulate.nutList.error                      = Error formulating nut ''{0}'': - {1}
-message.formulate.or                                 = or
-message.formulate.physicoChem.notInRangeValue        = The characteristic {0} (value: {1}) is not in specifications range ({2}expected value{3})
-message.formulate.physicoChemList.error              = Error formulating physico chemical ''{0}'': - {1}
-message.formulate.state.no_suppliers                 = The component has no suppliers
-message.formulate.undefined.charact                  = Characteristic ''{0}'' undefined
-message.formulate.undefined.value                    = Undefined value
-message.formulate.wrong.unit                         = The unit used is wrong.
-message.incorrect.paramater                          = Incorrect parameters
-message.project-template.destination.missed          = The destination on project template has not been configured 
-message.supplier-account.missed                      = No account provided for supplier
-message.supplier.entity-already-exists               = An entity with the same name already exists : {0}
-message.supplier.missed                              = No supplier provided for entity
-message.supplier.missing-email                       = No email provided
-message.supplier.project-template                    = Project Template is Mandatory
+message.async-mail.eco.apply.body                     = The application of the modification order {0} 
+message.async-mail.eco.apply.subject                  = [Notification] End of change order application 
+message.async-mail.eco.calculateWUsed.body            = The impact analysis of the change order {0} 
+message.async-mail.eco.calculateWUsed.subject         = [Notification] End of change order impact analysis
+message.async-mail.eco.simulate.body                  = The simulation of the change order {0} 
+message.async-mail.eco.simulate.subject               = [Notification] End of change order simulation
+message.decernis.charact.noCode                       = No regulatory code found for {0}
+message.decernis.error                                = Error running decernis service: {0}
+message.decernis.function.notRecognized               = Function not recognized: {0}
+message.decernis.ingredient.noFunction                = No function found for these ingredients
+message.decernis.ingredient.noRid                     = No RID found for these ingredients
+message.decernis.ingredient.notListed                 = Not listed ingredients
+message.decernis.ingredient.permitted                 = {0} {1}
+message.decernis.ingredient.prohibited                = Prohibited ingredients {0}
+message.decernis.ingredient.severalRid                = Several RIDs found for these ingredients
+message.formulate.allergen.error.empty                = Allergen not specified
+message.formulate.allergen.error.nullQtyPerc          = Cannot formulate allergen percent {0}.
+message.formulate.allergen.forbidden                  = Forbidden allergen: {0}.
+message.formulate.allergen.notValidated               = Allergens not validated
+message.formulate.comparewith.formulate.entity.error  = Cannot formulate entity to compare with: {0}
+message.formulate.cost.formulated                     = Formulation
+message.formulate.costList.error                      = Error formulating cost ''{0}'': - {1}
+message.formulate.empty_req_geo_origin_list           = Specifications are incompatible : required geographic origins for requirement ''{0}'' have no common element
+message.formulate.formula.error                       = Error in formula ''{0}''
+message.formulate.formula.incorrect.nutrientProfile   = Error calculating nutrient profile : {0}
+message.formulate.formula.incorrect.type.boolean      = Formula doesn't return boolean
+message.formulate.formula.incorrect.type.double       = Formula doesn't return double
+message.formulate.formula.toolong                     = Too many elements for the multilevel calculation of the formula {0}
+message.formulate.incorrect.ingList.total             = Total of ingredients is not 100%
+message.formulate.info.nut.notInRangeValue            = The nutrient {0} (value: {1}) is in specification range ({2}expected value{3})
+message.formulate.info.nut.notInRangeValue.AsPrepared = The nutrient {0} (prepared value: {1}) is in specification range ({2}expected value{3})
+message.formulate.info.nut.notInRangeValue.GdaPerc    = The nutrient {0} (% RI per portion value: {1}) is in specification range ({2}expected value{3})
+message.formulate.info.nut.notInRangeValue.Serving    = The nutrient {0} (1 serving value: {1}) is in specification range ({2}expected value{3})
+message.formulate.info.physicoChem.notInRangeValue    = The characteristic {0} (value: {1}) is in specifications range ({2}expected value{3})
+message.formulate.ingredient.forbidden                = An ingredient ({0}) is forbidden by the product specifications
+message.formulate.labelClaim.error                    = Error formulating label claim ''{0}'': - {1}
+message.formulate.labelClaim.missing                  = Claim ''{0}'' missing
+message.formulate.labelClaim.notClaimed               = Label ''{0}'' must be {1}
+message.formulate.labelClaim.value.certified          = certified
+message.formulate.labelClaim.value.false              = not claimed
+message.formulate.labelClaim.value.suitable           = suitable
+message.formulate.labelClaim.value.true               = claimed
+message.formulate.labelRule.error                     = Error formulating label rule ''{0}'': - {1}
+message.formulate.labelRule.error.nullIng             = Cannot declare or aggregate ingredient {0} without quantity, change component declaration type
+message.formulate.lca.formulated                      = Formulation
+message.formulate.lcaList.error                       = Error formulating LCA ''{0}'': - {1}
+message.formulate.mandatory_property                  = Mandatory field ''{0}'' is missing (catalog ''{1}'')
+message.formulate.mandatory_property_localized        = Mandatory field ''{0}'' {2} is missing (catalog ''{1}'')
+message.formulate.missing.density                     = The density of the product is missing.
+message.formulate.missing.ingList                     = The ingredient list is empty
+message.formulate.missing.numberOfProductPerBox       = Number of product per boxes is undefined. Please, add a packaging kit.
+message.formulate.missing.stock                       = Not enought stock.
+message.formulate.missing.tare                        = The tare of the product is missing.
+message.formulate.missing.unit                        = The unit of the product is missing.
+message.formulate.non-unique-field                    = The uniqueness of the field ''{0}'' is not respected
+message.formulate.nonValidatedState                   = Component was not validated
+message.formulate.notauhorized.ing                    = Ingredients are not authorized
+message.formulate.nut.formulated                      = Formulation
+message.formulate.nut.maximalDailyValue               = The maximum daily value of nutrient {0} is exceeded
+message.formulate.nut.notInRangeValue                 = The nutrient {0} (value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.AsPrepared      = The nutrient {0} (prepared value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.GdaPerc         = The nutrient {0} (% RI per portion value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.Serving         = The nutrient {0} (1 serving value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.wrongServingSize                = Wrong serving size {0} for {1}
+message.formulate.nutList.error                       = Error formulating nut ''{0}'': - {1}
+message.formulate.or                                  = or
+message.formulate.physicoChem.notInRangeValue         = The characteristic {0} (value: {1}) is not in specifications range ({2}expected value{3})
+message.formulate.physicoChemList.error               = Error formulating physico chemical ''{0}'': - {1}
+message.formulate.state.no_suppliers                  = The component has no suppliers
+message.formulate.undefined.charact                   = Characteristic ''{0}'' undefined
+message.formulate.undefined.value                     = Undefined value
+message.formulate.wrong.unit                          = The unit used is wrong.
+message.incorrect.paramater                           = Incorrect parameters
+message.project-template.destination.missed           = The destination on project template has not been configured 
+message.supplier-account.missed                       = No account provided for supplier
+message.supplier.entity-already-exists                = An entity with the same name already exists : {0}
+message.supplier.missed                               = No supplier provided for entity
+message.supplier.missing-email                        = No email provided
+message.supplier.project-template                     = Project Template is Mandatory
 
 nutriscore.display.aoacfibre        = AOAC fibers ({0} < {1} <= {2}) = {3}
 nutriscore.display.class            = <b>Nutrient profiling class</b> ({0} < {1} <= {2}) = <b>{3}</b>
