InProgress #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -410,6 +410,12 @@ form.control.spel-editor.item.profitability               = Profit
 form.control.spel-editor.item.projectedQty                = Projected quantity
 form.control.spel-editor.item.qty                         = Quantity
 form.control.spel-editor.item.qtyPerc                     = Percent quantity
+form.control.spel-editor.item.qtyPerc1                    = Quantity 1 (%)
+form.control.spel-editor.item.qtyPerc2                    = Quantity 2 (%)
+form.control.spel-editor.item.qtyPerc3                    = Quantity 3 (%)
+form.control.spel-editor.item.qtyPerc4                    = Quantity 4 (%)
+form.control.spel-editor.item.qtyPercWithSecondaryYield   = Qty as prepared (%)
+form.control.spel-editor.item.qtyPercWithYield            = Qty with yield (%)
 form.control.spel-editor.item.qtyResource                 = Resource quantity
 form.control.spel-editor.item.qtySubFormula               = Qty used
 form.control.spel-editor.item.rateProcess                 = Process rate
