Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -249,6 +249,7 @@ bcpg_bcpgmodel.property.bcpg_erpCode.title                                = ERP 
 bcpg_bcpgmodel.property.bcpg_evaporatedRate.title                         = Evaporation rate
 bcpg_bcpgmodel.property.bcpg_fdaNumber.title                              = FDA Cat.
 bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = FEMA No.
+bcpg_bcpgmodel.property.bcpg_filIngLevel.title                            = Ingredient level
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionization forbidden
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Maximum dosage
@@ -285,8 +286,8 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantity 1 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantity 2 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Quantity 3 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Quantity 4 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synthetic 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Natural (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qty as prepared (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qty with yield (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description             = Volume (%)
