Fix #22696 - [Feature] Add toxicology

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -45,13 +45,13 @@ path.exportciteo                         = Export packaging materials
 path.exportclientscorelist				 = Export client scores
 path.exportclientsurvey					 = Export client surveys
 path.exportcompositionpackaging          = Export composition and packaging lists
-path.exportdynamiccharactlist			 = Export list of calculated characteristics
-path.exportforbiddening					 = Export forbidden ingredients
+path.exportdynamiccharactlist            = Export list of calculated characteristics
+path.exportforbiddening                  = Export forbidden ingredients
 path.exportinglist                       = Export ingredients
 path.exportlabelclaimlist                = Export of claims
-path.exportlabelingrulelist				 = Export labeling rules
+path.exportlabelingrulelist              = Export labeling rules
 path.exportlabelling                     = Label export
-path.exportlca							 = Export life cycle analysis
+path.exportlca                           = Export life cycle analysis
 path.exportncsynthesis                   = Non conformities synthesis
 path.exportnutrients                     = Export nutrients
 path.exportphysicochemicallist           = Export of physico-chemicals
@@ -192,6 +192,8 @@ path.supplierentities                    = Supplier entities
 path.suppliers                           = Suppliers
 path.svhcreasonsforinclusions            = Svhc reasons for inclusions
 path.targetmarkets                       = Target Markets
+path.toxicities                          = Toxicology
+path.toxing                              = Ingredient toxicology
 path.tradeitemtradechannel               = Distribution channels
 path.tradeitemunitdescriptorcode         = Types of business unit
 path.trademarks                          = Trademarks
