--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -208,6 +208,7 @@ becpg.forms.set.product-name.label                             = Commercial Desi
 becpg.forms.set.product-specifications-criteria.label          = Product specifications criteria
 becpg.forms.set.product.name                                   = Product Name
 becpg.forms.set.promotional.label                              = Promotion
+becpg.forms.set.properties.label                               = Properties
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Compliance
 becpg.forms.set.score-criteria.label                           = Score criteria
@@ -219,6 +220,7 @@ becpg.forms.set.selected-products.label                        = Products select
 becpg.forms.set.survey-criteria.label                          = Survey criteria
 becpg.forms.set.svhc-criteria.label                            = Dangerous substances criteria
 becpg.forms.set.tertiaryPackaging.label                        = Ti/Hi information
+becpg.forms.set.toxicology.label                               = Toxicology
 becpg.forms.set.variableTradeItem.label                        = Variable product
 becpg.forms.unit.L                                             = L
 becpg.forms.unit.cL                                            = cL
