Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -286,7 +286,7 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantity 1 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantity 2 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synthetic 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synthetic (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Natural (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qty as prepared (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qty with yield (%)
