Fix #20803 - [Feature] Add default title in comparaison report

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -34,6 +34,7 @@ bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description              = Reco
 bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                    = Reconstitutable Aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryAspect.title                         = Regulatory aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryCodeAspect.title                     = Regulatory code aspect
+bcpg_bcpgmodel.aspect.bcpg_stateActivityPreviousState.title               = Previous state
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Supplier
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.title                           = Supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.description                    = For products purchased from a supplier
