--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.90-SNAPSHOT</version>
+    <version>4.2.3.90</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -64,4 +64,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>4.2.3.90</tag>
+  </scm>
 </project>
