Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -680,8 +680,8 @@ listconstraint.bcpg_filQtyPercTypes.Maxi                              = Maxi
 listconstraint.bcpg_filQtyPercTypes.Mini                              = Mini
 listconstraint.bcpg_filQtyPercTypes.QtyPerc1                          = Quantity 1
 listconstraint.bcpg_filQtyPercTypes.QtyPerc2                          = Quantity 2
-listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Quantity 3
-listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Quantity 4
+listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Synthetic
+listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Natural
 listconstraint.bcpg_filQtyPercTypes.QtyPercWithSecondaryYield         = Qty as prepared
 listconstraint.bcpg_filQtyPercTypes.QtyPercWithYield                  = Qty with yield 
 listconstraint.bcpg_labelClaimValues.certified                        = Certified
