Fix #18387 - [Feature] Add reference product in nutrient calculation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -392,6 +392,9 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                                  
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title                  = Measurement precision
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                                = Method
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                                  = Mini
+bcpg_bcpgmodel.property.bcpg_nutListReductionFormulatedValue.title              = % reduction calculated
+bcpg_bcpgmodel.property.bcpg_nutListReductionValue.title                        = % reduction
+bcpg_bcpgmodel.property.bcpg_nutListReferenceValue.title                        = Reference value
 bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                       = Target value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                          = Labeled value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title                  = Prepared labeled value
@@ -415,6 +418,7 @@ bcpg_bcpgmodel.property.bcpg_nutrientProfileScoreFormula.title                  
 bcpg_bcpgmodel.property.bcpg_nutrientProfileVersion.title                       = Nutrient profile version
 bcpg_bcpgmodel.property.bcpg_nutrientProfilingDetails.title                     = Nutrient profiling class
 bcpg_bcpgmodel.property.bcpg_nutrientProfilingScore.title                       = Nutrient profiling score
+bcpg_bcpgmodel.property.bcpg_nutrientReferenceProducts.title                    = Reference products
 bcpg_bcpgmodel.property.bcpg_organoListValue.title                              = Value
 bcpg_bcpgmodel.property.bcpg_packagingDescription.title                         = Packaging description
 bcpg_bcpgmodel.property.bcpg_packagingListIsMaster.title                        = Master
