--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/nut-database/nut-importer.get.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/nut-database/nut-importer.get.properties
@@ -5,9 +5,11 @@ button.load         = Load
 
 import-nuts = Import nutrients
 
-label.entities = Entities
+label.addAsReferenceNutrient   = Import as reference nutrients
+label.entities                 = Entities
+label.referenceNutrientLocales = Reference countries
 ## Labels
-label.supplier = Database
+label.supplier                 = Database
 
 title = Import entity
 
